--- a/solo-play/juo/homework_10/web/index.html
+++ b/solo-play/juo/homework_10/web/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <script defer src="member.js"></script>
+        <script defer src="client.js"></script>
         <script defer src="script.js"></script>
         <section>
             <h1>회원 가입</h1>
