--- a/solo-play/juo/homework_10_11/web/index.html
+++ b/solo-play/juo/homework_10_11/web/index.html
@@ -9,6 +9,7 @@
 
     <body>
         <script defer src="client.js"></script>
+        <script defer src="element.js"></script>
         <script defer src="script.js"></script>
         <section>
             <h1>회원 가입</h1>
