--- a/solo-play/juo/homework_10_11/web/index.html
+++ b/solo-play/juo/homework_10_11/web/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+        <script defer src="ws.js"></script>
         <script defer src="client.js"></script>
         <script defer src="element.js"></script>
         <script defer src="script.js"></script>
