Implement chat client base

--- a/solo-play/juo/chat/public/index.html
+++ b/solo-play/juo/chat/public/index.html
@@ -8,6 +8,9 @@
     </head>
 
     <body>
+        <script defer src="elements.js"></script>
+        <script defer src="client.js"></script>
+        <script defer src="chat.js"></script>
         <script defer src="script.js"></script>
 
         <div id="container">
@@ -21,15 +24,20 @@
                     <img class="chatProfilePicture" src="./res/favicon.png" />
                     <div class="chatTextGroup">
                         <span class="chatName">초미륵</span><br />
-                        <span class="chatText">빨리와 너만 안왔어</span><br />
+                        <span class="chatText">빨리와 너만 안왔어</span>
+                        <span class="chatTime">오후 7:26</span>
+                        <br />
                     </div>
                 </div>
                 <div class="chatLogItem">
                     <img class="chatProfilePicture" src="./res/favicon.png" />
                     <div class="chatTextGroup">
                         <span class="chatName">금부장</span><br />
-                        <span class="chatText">엥 나만왔어</span><br />
-                        <span class="chatText">구라까지마</span><br />
+                        <span class="chatText">엥 나만왔어</span>
+                        <br />
+                        <span class="chatText">구라까지마</span>
+                        <span class="chatTime">오후 7:27</span>
+                        <br />
                     </div>
                 </div>
             </div>
